--- a/SVX_Boost2x_Lung_D90.Rmd
+++ b/SVX_Boost2x_Lung_D90.Rmd
@@ -67,7 +67,9 @@ library(kableExtra)
 
 ```{r}
 #Replace w/ path to CFU sheet
-path <- c("/Volumes/rstor-henao_lab/Pablo/CFU_Pipeline/SVX_Boost2X_Lung_Day90_cfu_numbers.xlsx")
+# path <- c("/Volumes/rstor-henao_lab/Pablo/CFU_Pipeline/SVX_Boost2X_Lung_Day90_cfu_numbers.xlsx")
+
+path <- c("R:\\RSTOR-HenaO_lab\\Pablo\\CFU_Pipeline\\SVX_Boost2X_Lung_Day90_cfu_numbers.xlsx")
 
 sheet_names <- excel_sheets(path)
 sheet_names <- sheet_names[!sheet_names %in% c("metadata")]
@@ -191,6 +193,27 @@ tidy_cfu_data <- all_data %>%
 ```
 
 
+```{r}
+# Calculating CFU/ml for every qualifying replicate between 10-75 CFUs. Column binding by organ name to the metadata sheet via inner_join().
+meta <- read_excel(path, sheet = "metadata")
+
+tidy_cfu_meta_joined  <- inner_join(meta, tidy_cfu_data) %>%
+  group_by(group) %>% 
+  mutate(CFUs_whole = ((CFUs * dilution_factor^dilution/volume_plated_ml) * total_resuspension_mL)/.33) %>%
+  dplyr::select(organ, count_date, who_plated, who_counted, group,  mouse, dilution, 
+         CFUs, CFUs_whole) %>% 
+  ungroup()
+
+# tidy_cfu_meta_joined  <- tidy_cfu_meta_joined %>%
+#   filter(!(mouse == "D" & group == "BCG + SolaVAX-IM-CpG1018 + SolaVAX-IN-CPG1018"))
+# 
+# tidy_cfu_meta_joined  <- tidy_cfu_meta_joined %>%
+#   filter(!(mouse == "B" & group == "BCG 1x"))
+
+tidy_cfu_meta_joined 
+```
+
+
 ## Calculate CFUs from best dilution/Estimate bacterial load for each sample based on good dilution
 ```{r}
 # Calculating CFU/ml for every qualifying replicate between 10-75 CFUs. Column binding by organ name to the metadata sheet via inner_join().
@@ -198,7 +221,7 @@ meta <- read_excel(path, sheet = "metadata")
 
 lungD90tidy_cfu_meta_joined  <- inner_join(meta, tidy_cfu_data) %>%
   group_by(group) %>% 
-  mutate(CFUs_whole = ((CFUs * dilution_factor^dilution/volume_plated_ml) * total_resuspension_mL)/.50) %>%
+  mutate(CFUs_whole = ((CFUs * dilution_factor^dilution/volume_plated_ml) * total_resuspension_mL)/.33) %>%
   dplyr::select(organ, count_date, who_plated, who_counted, group,  mouse, dilution, 
          CFUs, CFUs_whole) %>% 
   ungroup()
@@ -210,6 +233,9 @@ lungD90tidy_cfu_meta_joined  <- inner_join(meta, tidy_cfu_data) %>%
 #   filter(!(mouse == "B" & group == "BCG 1x"))
 
 lungD90tidy_cfu_meta_joined 
+
+setwd("R:/RSTOR-HenaO_lab/Pablo/CFU_Pipeline")
+getwd()
 
 write.csv(lungD90tidy_cfu_meta_joined, "lungD90tidy_cfu_meta_joined.csv", row.names = FALSE)
 
@@ -308,7 +334,7 @@ with(tidy_cfu_meta_joined, t.test(log10(CFUs_whole)[group == "Saline"], log10(CF
 ```
 
 
-```{r fig.width=5}
+```{r}
 # tidy_cfu_meta_joined %>%
 #   ggplot(aes(x = group, y = log10(CFUs_whole), fill = group)) +
 #   geom_point(size = 5, shape = 21, alpha = 0.8, na.rm = T, colour = "black", cex = 1.5, position = position_dodge(width = .75)) +
@@ -331,8 +357,8 @@ with(tidy_cfu_meta_joined, t.test(log10(CFUs_whole)[group == "Saline"], log10(CF
 #   ylim(4, 7)
 
 # FILTERING GROUPS
-tidy_cfu_meta_joined <- tidy_cfu_meta_joined %>%
-  dplyr::filter(group %in% c("Saline", "BCG 1x", "BCG + SolaVAX-IM-CpG1018 2x", "BCG + SolaVAX-IM-CpG1018 + SolaVAX-IN-CPG1018"))
+# tidy_cfu_meta_joined <- tidy_cfu_meta_joined %>%
+#   dplyr::filter(group %in% c("Saline", "BCG 1x", "BCG + SolaVAX-IM-CpG1018 2x", "BCG + SolaVAX-IM-CpG1018 + SolaVAX-IN-CPG1018"))
 
 
 ggplot(tidy_cfu_meta_joined, aes(x = group, y = log10(CFUs_whole), fill = group)) +#, color = group)) +
